--- a/src/About.html
+++ b/src/About.html
@@ -137,11 +137,11 @@ button:hover {
     <header>
         <nav>
             <ul>
-                <li><a href="./main_page.html">Home</a></li>
-                <li><a href="./About.html">About Me</a></li>
-                <li><a href="./Skills.html">Skills</a></li>
+                <li><a href="main_page.html">Home</a></li>
+                <li><a href="About.html">About Me</a></li>
+                <li><a href="Skills.html">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="./Contact.html">Contact</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -155,7 +155,7 @@ button:hover {
                     I enjoy turning complex problems into simple, beautiful, and intuitive interfaces. Whether it's crafting clean code or bringing a design to life, I strive to build products that not only meet user needs but also exceed expectations. As I continue to expand my skills and knowledge, I’m excited to work on innovative projects and collaborate with like-minded professionals.</p>
                 <button id="learn-more">Learn More</button>
             </div>
-            <img src="./media/Image1.jpeg" alt="A photo of myself" class="hero-image">
+            <img src="media/Image1.jpeg" alt="A photo of myself" class="hero-image">
         </div>
     </section>
     
